# Mospolytech__Drivers_and_applications_security

./: .gitignore  README.md
IOApp/: IOApp.cpp
lab3_enclave/: lab3_enclave.cpp  lab3_enclave.edl  lab3_enclave.sln  lab3_enclave.vcxproj  lab3_enclave.vcxproj.filters  lab3_enclave_private.pem  lab3_enclave_t.c
lab3_enclave/Simulation/: lab3_enclave.dll.recipe  lab3_enclave.exp  lab3_enclave.lib  lab3_enclave.vcxproj.FileListAbsolute.txt
lab3_enclave/Simulation/lab3_enclave.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  lab3_enclave.lastbuildstate  lab3_enclave.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lab3_main/: lab3_enclave_u.c  lab3_main.cpp  lab3_main.vcxproj  lab3_main.vcxproj.filters
pass-lab-tauri/: .gitignore  package-lock.json  package.json
pass-lab-tauri/Satellite/satellite/: Cargo.toml
pass-lab-tauri/Satellite/satellite/src/: main.rs
pass-lab-tauri/self_hasher/: Cargo.toml
pass-lab-tauri/self_hasher/src/: main.rs
pass-lab-tauri/src/: App.js  index.js
pass-lab-tauri/src-tauri/: Cargo.toml  data.json  data_dev.data  master.key  tauri.conf.json
pass-lab-tauri/src-tauri/src/: main.rs
pass-lab-tauri/src/components/: AddModal.js  ConfirmModal.js  SiteObj.js
pass-lab-tauri/src/helper/: AES.js
pass-lab-tauri/src/pages/: FaceLogPage.js  LoginPage.js  MainPage.js  ScrollBar.css
pass-lab-tauri/src/storage/: Data.js
passThrough/: passThrough.c
