[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.8", features = [] }

[dependencies]
hex = "0.4.3"
exe = "0.5.4"
base16ct = "0.1.1"
base64ct = "1.5.0"
sha2 = "0.10.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.9", features = ["api-all"] }

[dependencies.windows]
version = "0.36.1"
features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging"
]

[dependencies.windows-sys]
version = "0.36.1"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation"
]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
